--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                 <div class="headerContent">
                     <h1>Overview</h1>
 
-                                            <div class="searchSection">
-                            <input type="text" placeholder="Search">
-                        </div>
+                    <div class="searchSection">
+                        <input type="text" placeholder="Search">
+                    </div>
                     <div class="headerContentRight">
 
                         <div id="profileSection">
@@ -166,6 +166,7 @@
                 <h3>This months' graph</h3>
                 <img src="img/magicpattern-svg-chart-1662661659941.svg" alt="graph">
             </div>
+            <div class="chartStatsContainer"></div>
             <div class="chartStats">
                 <div class="chartStatsContent">
                     <h3>Success rate yesterday</h3>
@@ -179,17 +180,48 @@
                     <h3>Success rate last month</h3>
                     <h2>80%</h2>
                 </div>
+
+            </div>
+        </div>
+        <div class="gridContentBottom">
+            <div class="overviewToDo">
+                <h3>Unresolved tasks <p></p>
+                </h3>
+                <h4><a href="index.html">View more</a></h4>
+
                 
-        </div>
-        </div>
-        <div class="gridContent">
-            <div class="overviewToDo"></div>
-            <div class="overviewInProgress"></div>
+                    <div class="toDoTask">
+                        <h3>Task 1</h3>
+                        <h4>Due date: 12/12/2019</h4>
+                    </div>
+                    <div class="toDoTask">
+                        <h3>Task 2</h3>
+                        <h4>Due date: 12/12/2019</h4>
+                    </div>
+            </div>
+            <div class="overviewInProgress">
+                <div class="overviewToDo">
+                    <h3>Unresolved tasks <p></p>
+                    </h3>
+                    <h4><a href="index.html">View more</a></h4>
+
+                    <div class="toDoTask">
+                        <h3>Task 1</h3>
+                        <h4>Due date: 12/12/2019</h4>
+                    </div>
+                    <div class="toDoTask">
+                        <h3>Task 2</h3>
+                        <h4>Due date: 12/12/2019</h4>
+                    </div>
+
+
+
+                </div>
+            </div>
+
         </div>
 
-    </div>
-
-    <script src="scripts/script.js" async defer></script>
+        <script src="scripts/script.js" async defer></script>
 </body>
 
 </html>
