--- a/index.html
+++ b/index.html
@@ -159,6 +159,22 @@
                 <h2>Dummy</h2>
                 <h3>Dummy</h3>
             </div>
+            <div class="overviewNew">
+                <h2>Dummy</h2>
+                <h3>Dummy</h3>
+            </div>
+            <div class="overviewNew">
+                <h2>Dummy</h2>
+                <h3>Dummy</h3>
+            </div>
+            <div class="overviewNew">
+                <h2>Dummy</h2>
+                <h3>Dummy</h3>
+            </div>
+            <div class="overviewNew">
+                <h2>Dummy</h2>
+                <h3>Dummy</h3>
+            </div>
 
         </div>
         <div class="graph gridContent">
